[gd_scene load_steps=10 format=3 uid="uid://bnv3dsph5e4kk"]

[ext_resource type="Script" path="res://scenes/collectibles/mineral.gd" id="1_6jknx"]
[ext_resource type="Texture2D" uid="uid://cqsq08lpsfbd3" path="res://art/powerups/things_bronze.png" id="2_0dljr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l3oou"]
radius = 12.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_aurr7"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_c5cwo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ame1b"]
offsets = PackedFloat32Array(0, 0.819383, 1)
colors = PackedColorArray(1, 0.521569, 0, 0, 1, 0.490196, 0, 1, 1, 0.893333, 0.68, 1)

[sub_resource type="Animation" id="Animation_44ll1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i5qym"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.5, 1.5, 1.2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwy71"]
_data = {
"RESET": SubResource("Animation_44ll1"),
"idle": SubResource("Animation_i5qym")
}

[node name="mineral" type="Area2D"]
collision_layer = 64
collision_mask = 514
script = ExtResource("1_6jknx")

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l3oou")

[node name="trail" type="Line2D" parent="."]
modulate = Color(1, 1, 1, 0.784314)
material = SubResource("CanvasItemMaterial_aurr7")
width_curve = SubResource("Curve_c5cwo")
gradient = SubResource("Gradient_ame1b")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="sprite" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_0dljr")

[node name="timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="anima" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_xwy71")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
